--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "classnames": "^2.5.1",
+    "jsdom": "^26.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stylus": "^0.64.0",
@@ -27,6 +28,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "test": "vitest --run",
+    "test:watch": "vitest --watch",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "init-msw": "msw init public/"
