--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "classnames": "^2.5.1",
     "jsdom": "^26.0.0",
     "react": "^18.2.0",
