--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,6 @@
 # testing
 /coverage
 
-# production
-/build
-
 # misc
 .DS_Store
 .env.local
@@ -23,5 +20,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+/dist
+/storybook-static
 
 build-storybook.log
